tests/fixtures/negative/code-style/PreferStringJoinOverMultipleNewlines.cls
public class Example {
    public void method() {
        // Violation: String with multiple newlines
        String text = 'line1\nline2\nline3';

        // Violation: String with more newlines
        String multiLine = 'a\nb\nc\nd\ne';
    }
}

